@@ -1,6 +1,6 @@
-/* $Id: wingettimeofday.h,v 1.2 2011/07/15 08:30:11 nanard Exp $ */
+/* $Id: wingettimeofday.h,v 1.5 2013/09/11 07:22:25 nanard Exp $ */
 /* libnatpmp
-Copyright (c) 2007-2011, Thomas BERNARD 
+Copyright (c) 2007-2013, Thomas BERNARD
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -34,6 +34,6 @@ POSSIBILITY OF SUCH DAMAGE.
 #else
 #include <sys/time.h>
 #endif
-int gettimeofday(struct timeval* p, void* tz /* IGNORED */);
+int natpmp_gettimeofday(struct timeval* p, void* tz /* IGNORED */);
 #endif
 #endif
